# rust-matrix-state

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  main.rs  state.rs  state_map.rs
